--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <p>uyghkyf868@gmail.com</p>
     <hr>
 
-    <!-- <form class="" action="html2.html" method="post"> -->
+    <!-- <form class="" action="index.html" method="post"> -->
         <!-- <label>Your Name: </label>
         <input type="text" name="" value="">
         <input type="color" name="" value=""><br>
